@@ -1,27 +1,27 @@
-8e351a204e5a60a06e94484414f7403f *DESCRIPTION
+f2a1ed35e77c812efda70a87daf6da2f *DESCRIPTION
 cc4a0543a8648a70e9cab06b0cd241e8 *LICENSE
 48b28bc8021b054c031400a0495ac4fb *NAMESPACE
 e8d6c2f037c258c4beb6437f9e76c66e *R/DataSource.R
 24a9ac310fe3e1c1409b28da7cde28d2 *R/Output.R
 d110dbce50f0dc559b5017f4a2c8815e *R/RecoModel.R
-ab0ba2db196ab9b4c7954f9537353908 *R/RecoSys.R
+b40f8e4b533db3b04a7f00b7716c4654 *R/RecoSys.R
 b319469a7016df0acd4fecb6986e1677 *README.md
-32c35820ab157b35494b15b198d682c0 *build/vignette.rds
+bb92c038fc3c4bd463e80e42ba7fb016 *build/vignette.rds
 1a58a8c8fac6db66cf2ab410ea430c42 *inst/AUTHORS
 93d41f14379d164378e12a2da46ca87d *inst/COPYRIGHTS
-d9109c05c9e92e0beaffcb3cb2eb0312 *inst/NEWS.Rd
+5a251896d38d2803389d53fd49f9aed1 *inst/NEWS.Rd
 b6c39d661d25cc1f37f95f2280525104 *inst/dat/smalltest.txt
 d9e88b463350a2014e23447e141b6d3f *inst/dat/smalltrain.txt
 2a623a5638b726fa3b39c3d5db4368bf *inst/doc/introduction.R
 d3a12dc647adf745c276756adb01c380 *inst/doc/introduction.Rmd
-6461eb29a8d93cf19dc106ba13d32db0 *inst/doc/introduction.html
-ebf945a4edb80d279a22b656e2edb98c *man/Reco.Rd
-c8f6a322007dcd62bb69e3a9ef5ebe23 *man/data_source.Rd
-2f86a521f06c830c6d8bbb33e0ca91d7 *man/output.Rd
-0c382a6eea673bb65fffc56d2edc52aa *man/output_format.Rd
-93685bfe835385e8ef49c252d6a3a94b *man/predict.Rd
-f1ecf7801c4938ffbf90a4a07b55e35d *man/train.Rd
-8d223548638cdf0ffed8f7ef48dfef7d *man/tune.Rd
+e9f9adc78956dc24041b7f726dafea42 *inst/doc/introduction.html
+84d85fc94af8acdf65be52978bce7721 *man/Reco.Rd
+7b415061df0d8a1792c5333cf88ff56d *man/data_source.Rd
+6ae7fc52dff917f1adda708d31ca9d80 *man/output.Rd
+84d482597d483abd8ea4cebab9e8142c *man/output_format.Rd
+ed64ddf5e45916d84d8a5c41edce53f1 *man/predict.Rd
+3256ce49df5d40fd7dbe87a3a28f1fcc *man/train.Rd
+a6e59a872e0aaa8d9ed7092eee0727d1 *man/tune.Rd
 0f77b866f62b238714a512c8c9e1f907 *src/Makevars
 46ad7d8696b9645ffae9e643effa49b4 *src/Makevars.win
 63b3a9ff9da0cad5f1360e5de7fa1939 *src/mf.cpp
@@ -30,9 +30,9 @@ a122595fe325f44bc900503023722ed2 *src/reco-output.cpp
 a32a51bf630f1df5b1ff0528e73ec514 *src/reco-predict.cpp
 2bf0b3e2efd59eb87c64681c4fd8b03d *src/reco-read-data.cpp
 50e120fb21a84795e3b76b2172cdceb7 *src/reco-read-data.h
-cbf5df6caf529ca569e424ad7c14b733 *src/reco-train.cpp
-55cce6e58998949b3818717a4101b3a7 *src/reco-tune.cpp
+a4f01eb44a1d2fde0a566416af3aea31 *src/reco-train.cpp
+a99936eeb272501a59f7ec49149cea32 *src/reco-tune.cpp
 a9cf748b2544a3bf7c2a9f837334d429 *src/reco-utils.h
-cde0e695f0134ca36b05e3f14e217517 *src/register_routines.c
-e1e8c760dc2e3b620236087e44b7134d *src/register_routines.h
+9dcb2ca216bb88a6840f40b9118fa5db *src/register_routines.c
+b8013516aad8c520255599c8456754d4 *src/register_routines.h
 d3a12dc647adf745c276756adb01c380 *vignettes/introduction.Rmd
