@@ -12,7 +12,7 @@
 
 <meta name="author" content="Yixuan Qiu" />
 
-<meta name="date" content="2017-03-20" />
+<meta name="date" content="2017-09-01" />
 
 <title>recosystem: Recommender System Using Parallel Matrix Factorization</title>
 
@@ -71,7 +71,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <section class="page-header">
 <h1 class="title toc-ignore project-name">recosystem: Recommender System Using Parallel Matrix Factorization</h1>
 <h4 class="author project-author">Yixuan Qiu</h4>
-<h4 class="date project-date">2017-03-20</h4>
+<h4 class="date project-date">2017-09-01</h4>
 </section>
 
 
@@ -285,49 +285,49 @@ opts</code></pre></div>
 ## 13  10        0     0.01        0     0.01   0.2 1.1022376
 ## 14  20        0     0.01        0     0.01   0.2 1.0266608
 ## 15  30        0     0.01        0     0.01   0.2 1.0039170
-## 16  10        0     0.10        0     0.01   0.2 1.0780578
-## 17  20        0     0.10        0     0.01   0.2 1.0392090
-## 18  30        0     0.10        0     0.01   0.2 1.0011658
-## 19  10        0     0.01        0     0.10   0.2 1.0678387
-## 20  20        0     0.01        0     0.10   0.2 1.0291704
-## 21  30        0     0.01        0     0.10   0.2 1.0040255
-## 22  10        0     0.10        0     0.10   0.2 1.0316928
-## 23  20        0     0.10        0     0.10   0.2 1.0230501
-## 24  30        0     0.10        0     0.10   0.2 1.0158914</code></pre>
+## 16  10        0     0.10        0     0.01   0.2 1.0734307
+## 17  20        0     0.10        0     0.01   0.2 1.0393326
+## 18  30        0     0.10        0     0.01   0.2 1.0003177
+## 19  10        0     0.01        0     0.10   0.2 1.0769594
+## 20  20        0     0.01        0     0.10   0.2 1.0323938
+## 21  30        0     0.01        0     0.10   0.2 1.0061849
+## 22  10        0     0.10        0     0.10   0.2 1.0365456
+## 23  20        0     0.10        0     0.10   0.2 1.0023265
+## 24  30        0     0.10        0     0.10   0.2 1.0044131</code></pre>
 <div class="sourceCode"><pre class="sourceCode r"><code class="sourceCode r">r$<span class="kw">train</span>(train_set, <span class="dt">opts =</span> <span class="kw">c</span>(opts$min, <span class="dt">nthread =</span> <span class="dv">1</span>, <span class="dt">niter =</span> <span class="dv">20</span>))</code></pre></div>
 <pre><code>## iter      tr_rmse          obj
-##    0       2.2636   5.3615e+04
-##    1       1.0251   1.3645e+04
-##    2       0.8350   1.0101e+04
-##    3       0.7973   9.4686e+03
-##    4       0.7693   9.0243e+03
-##    5       0.7401   8.5952e+03
-##    6       0.7038   8.1040e+03
-##    7       0.6607   7.5631e+03
-##    8       0.6125   7.0134e+03
-##    9       0.5616   6.4781e+03
-##   10       0.5113   6.0016e+03
-##   11       0.4636   5.5876e+03
-##   12       0.4218   5.2604e+03
-##   13       0.3837   4.9762e+03
-##   14       0.3523   4.7621e+03
-##   15       0.3253   4.5892e+03
-##   16       0.3021   4.4463e+03
-##   17       0.2818   4.3233e+03
-##   18       0.2648   4.2235e+03
-##   19       0.2496   4.1328e+03</code></pre>
+##    0       2.2673   5.3765e+04
+##    1       1.0267   1.3667e+04
+##    2       0.8372   1.0147e+04
+##    3       0.7977   9.4773e+03
+##    4       0.7703   9.0439e+03
+##    5       0.7402   8.5967e+03
+##    6       0.7048   8.1202e+03
+##    7       0.6609   7.5638e+03
+##    8       0.6133   7.0246e+03
+##    9       0.5614   6.4770e+03
+##   10       0.5110   5.9985e+03
+##   11       0.4633   5.5846e+03
+##   12       0.4203   5.2436e+03
+##   13       0.3833   4.9761e+03
+##   14       0.3510   4.7545e+03
+##   15       0.3240   4.5818e+03
+##   16       0.3005   4.4356e+03
+##   17       0.2808   4.3158e+03
+##   18       0.2640   4.2181e+03
+##   19       0.2493   4.1321e+03</code></pre>
 <div class="sourceCode"><pre class="sourceCode r"><code class="sourceCode r">## Write predictions to file
 pred_file =<span class="st"> </span><span class="kw">tempfile</span>()
 r$<span class="kw">predict</span>(test_set, <span class="kw">out_file</span>(pred_file))</code></pre></div>
-<pre><code>## prediction output generated at /tmp/RtmpBEveFJ/file254d66700b09</code></pre>
+<pre><code>## prediction output generated at /tmp/RtmpPR5Vsw/filea441802b01</code></pre>
 <div class="sourceCode"><pre class="sourceCode r"><code class="sourceCode r"><span class="kw">print</span>(<span class="kw">scan</span>(pred_file, <span class="dt">n =</span> <span class="dv">10</span>))</code></pre></div>
-<pre><code>##  [1] 3.52422 3.12462 2.69143 3.28430 2.20439 2.46845 3.47362 3.42118
-##  [9] 2.12710 3.37242</code></pre>
+<pre><code>##  [1] 3.76629 2.85805 3.13870 3.22261 2.88342 2.93686 2.71680 2.96046
+##  [9] 2.78316 3.65474</code></pre>
 <div class="sourceCode"><pre class="sourceCode r"><code class="sourceCode r">## Or, directly return an R vector
 pred_rvec =<span class="st"> </span>r$<span class="kw">predict</span>(test_set, <span class="kw">out_memory</span>())
 <span class="kw">head</span>(pred_rvec, <span class="dv">10</span>)</code></pre></div>
-<pre><code>##  [1] 3.524225 3.124621 2.691433 3.284296 2.204390 2.468448 3.473621
-##  [8] 3.421184 2.127095 3.372418</code></pre>
+<pre><code>##  [1] 3.766290 2.858054 3.138699 3.222605 2.883422 2.936855 2.716800
+##  [8] 2.960460 2.783164 3.654735</code></pre>
 <p>Detailed help document for each function is available in topics <code>?recosystem::Reco</code>, <code>?recosystem::tune</code>, <code>?recosystem::train</code>, <code>?recosystem::output</code> and <code>?recosystem::predict</code>.</p>
 </div>
 <div id="performance-improvement-with-extra-installation-options" class="section level2">
@@ -368,7 +368,7 @@ PKG_CXXFLAGS += -mavx</code></pre></li>
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
