@@ -1,9 +1,9 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/DataSource.R
 \name{data_source}
+\alias{data_source}
 \alias{data_file}
 \alias{data_memory}
-\alias{data_source}
 \title{Specifying Data Source}
 \usage{
 data_file(path, index1 = FALSE, ...)
@@ -16,6 +16,8 @@ data_memory(user_index, item_index, rating = NULL, index1 = FALSE, ...)
 \item{index1}{Whether the user indices and item indices start with 1
 (\code{index1 = TRUE}) or 0 (\code{index1 = FALSE}).}
 
+\item{\dots}{Currently unused.}
+
 \item{user_index}{An integer vector giving the user indices of rating scores.}
 
 \item{item_index}{An integer vector giving the item indices of rating scores.}
@@ -23,8 +25,6 @@ data_memory(user_index, item_index, rating = NULL, index1 = FALSE, ...)
 \item{rating}{A numeric vector of the observed entries in the rating matrix.
 Can be specified as \code{NULL} for testing data, in which case
 it is ignored.}
-
-\item{\dots}{Currently unused.}
 }
 \value{
 An object of class "DataSource" as required by
@@ -66,10 +66,9 @@ that the value (rating) column is not required, and will be ignored if it is
 provided. The \file{smalltest.txt} file in the \file{dat} directory of this
 package shows an example of testing data file.
 }
-\author{
-Yixuan Qiu <\url{http://statr.me}>
-}
 \seealso{
 \code{$\link{tune}()}, \code{$\link{train}()}, \code{$\link{predict}()}
 }
-
+\author{
+Yixuan Qiu <\url{http://statr.me}>
+}
