@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/Output.R
 \name{output_format}
+\alias{output_format}
 \alias{out_file}
 \alias{out_memory}
 \alias{out_nothing}
-\alias{output_format}
 \title{Specifying Output Format}
 \usage{
 out_file(path, ...)
@@ -31,10 +31,9 @@ that the result should be written into a file, \code{out_memory()} makes
 the result to be returned as R objects, and \code{out_nothing()} means
 the result is not needed and will not be returned.
 }
-\author{
-Yixuan Qiu <\url{http://statr.me}>
-}
 \seealso{
 \code{$\link{output}()}, \code{$\link{predict}()}
 }
-
+\author{
+Yixuan Qiu <\url{http://statr.me}>
+}
