@@ -42,6 +42,8 @@ The \code{opts} argument is a list that can supply any of the following paramete
 \item{\code{niter}}{Integer, the number of iterations. Default is 20.}
 \item{\code{nthread}}{Integer, the number of threads for parallel
                       computing. Default is 1.}
+\item{\code{nbin}}{Integer, the number of bins. Must be greater than \code{nthread}.
+                   Default is 20.}
 \item{\code{nmf}}{Logical, whether to perform non-negative matrix factorization.
                   Default is \code{FALSE}.}
 \item{\code{verbose}}{Logical, whether to show detailed information. Default is
@@ -73,6 +75,7 @@ For one-class matrix factorization,
 \item{\code{"col_log"}}{Column-oriented pair-wise logarithmic loss}
 }
 }
+
 \examples{
 ## Training model from a data file
 train_set = system.file("dat", "smalltrain.txt", package = "recosystem")
@@ -90,9 +93,6 @@ r$train(data_memory(train_df[, 1], train_df[, 2], train_df[, 3]),
 )
 
 }
-\author{
-Yixuan Qiu <\url{http://statr.me}>
-}
 \references{
 W.-S. Chin, Y. Zhuang, Y.-C. Juan, and C.-J. Lin.
 A Fast Parallel Stochastic Gradient Method for Matrix Factorization in Shared Memory Systems.
@@ -109,4 +109,6 @@ Technical report, 2015.
 \seealso{
 \code{$\link{tune}()}, \code{$\link{output}()}, \code{$\link{predict}()}
 }
-
+\author{
+Yixuan Qiu <\url{http://statr.me}>
+}
